Updated input accessibility

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </main>
     <footer>
         <p> Become a Nu Metal Maven! </p>
-       <p> Name: <input type="text"> 
-         Email: <input type="text"> </p>
-        <button type="submit"> Submit </button>
+       <p> Name: <input type="text" aria-label="text"> 
+         Email: <input type="text" aria-label="text"> </p>
+        <button type="submit" aria-label="Submit"> Submit </button>
     </footer>
 </body>
 
